--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.5.2"
+circleindicator = "2.1.6"
 glide = "4.16.0"
 hiltAndroid = "2.51.1"
 kotlin = "2.0.0"
@@ -18,9 +19,11 @@ sdpAndroid = "1.1.1"
 sspAndroid = "1.1.1"
 navigationFragment = "2.8.4"
 timber = "5.0.1"
+whynotimagecarousel = "2.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+circleindicator = { module = "me.relex:circleindicator", version.ref = "circleindicator" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroid" }
@@ -39,6 +42,7 @@ sdp-android = { module = "com.intuit.sdp:sdp-android", version.ref = "sdpAndroid
 ssp-android = { module = "com.intuit.ssp:ssp-android", version.ref = "sspAndroid" }
 androidx-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
+whynotimagecarousel = { module = "org.imaginativeworld.whynotimagecarousel:whynotimagecarousel", version.ref = "whynotimagecarousel" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
