feat: Implement recommended activity design with API integration fix: Resolve home fragment design issues - Designed and implemented recommended activity layout. - Added functionality to fetch and set data from API for recommended activity. - Fixed layout issues in the home fragment to ensure proper alignment and styling.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.GoZayaanTest"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.recommended.RecommendedActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.details.DetailsActivity"
             android:exported="false" />
         <activity
