feat: Add loaders for home and recommended pages fix: Adjust text size and color for details and other pages feat: Integrate API for splash screen chore: Update bottom navigation selected color feat: Add custom decoration for popular category and recommended adapters

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,8 @@ sspAndroid = "1.1.1"
 navigationFragment = "2.8.4"
 timber = "5.0.1"
 whynotimagecarousel = "2.1.0"
+coreSplashscreen = "1.0.1"
+navigationUiKtx = "2.8.4"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -43,6 +45,7 @@ ssp-android = { module = "com.intuit.ssp:ssp-android", version.ref = "sspAndroid
 androidx-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 whynotimagecarousel = { module = "org.imaginativeworld.whynotimagecarousel:whynotimagecarousel", version.ref = "whynotimagecarousel" }
+androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
